Integrated Amazon S3 for Video Uploads

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,3 +1,4 @@
 AWS_ACCESS_KEY: "AKIAJL72PASBDIPR55XA"
 AWS_SECRET_KEY: "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"
 AWS_BUCKET: "flixster-gillian"
+AWS_REGION: "us-east-1"
