Adjusted Image Resolution

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,4 +1,3 @@
-AWS_ACCESS_KEY: "AKIAJL72PASBDIPR55XA"
-AWS_SECRET_KEY: "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"
+AWS_ACCESS_KEY: "AKIAIST6SRLUAJYGHTZQ"
+AWS_SECRET_KEY: "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"
 AWS_BUCKET: "flixster-gillian"
-AWS_REGION: "us-east-1"
