--- a/config/application.yml
+++ b/config/application.yml
@@ -1,4 +1,14 @@
-AWS_ACCESS_KEY: "AKIAIST6SRLUAJYGHTZQ"
-AWS_SECRET_KEY: "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"
+# Add configuration values here, as shown below.
+#
+# pusher_app_id: "2954"
+# pusher_key: 7381a978f7dd7f9a1117
+# pusher_secret: abdc3b896a0ffb85d373
+# stripe_api_key: sk_test_2J0l093xOyW72XUYJHE4Dv2r
+# stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
+#
+# production:
+#   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
+#   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
+AWS_ACCESS_KEY: "AKIAIK5B6WVWGFXVJC4Q"
+AWS_SECRET_KEY: "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"
 AWS_BUCKET: "flixster-gillian"
-AWS_REGION:     "us-east-1"
